--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
         "dev": "nodemon"
     },
     "dependencies": {
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
+        "mongo": "^0.1.0",
+        "mongodb": "^4.7.0",
+        "mongoose": "^6.3.6",
         "nodemon": "^2.0.2"
     },
     "devDependencies": {
